--- a/index.html
+++ b/index.html
@@ -10,36 +10,23 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-image: linear-gradient(to right, #00b4d8, #90e0ef); /* Gradient fon */
-            color: #333;
+            background-color: #f5f5f5;
         }
 
         header {
-            background-color: #222;
-            color: #f1f1f1;
+            background-color: #333;
+            color: white;
             text-align: center;
             padding: 50px 0;
         }
 
         h1 {
-            font-size: 4em;
+            font-size: 3em;
             letter-spacing: 5px;
             text-transform: uppercase;
-            animation: slideIn 2s ease-out;
         }
 
-        @keyframes slideIn {
-            0% {
-                opacity: 0;
-                transform: translateY(-100px);
-            }
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        #calculator {
+        #chatContainer {
             background-color: #fff;
             padding: 30px;
             margin: 20px auto;
@@ -49,8 +36,17 @@
             text-align: center;
         }
 
-        #calculator h2 {
+        #chatContainer h2 {
             color: #333;
+        }
+
+        #messages {
+            height: 200px;
+            overflow-y: scroll;
+            border: 1px solid #ccc;
+            margin-bottom: 10px;
+            padding: 10px;
+            background-color: #f5f5f5;
         }
 
         input, button {
@@ -58,39 +54,21 @@
             margin: 10px 0;
             padding: 10px;
             border: 2px solid #ccc;
-            border-radius: 25px;
+            border-radius: 5px;
             font-size: 1.2em;
-        }
-
-        input:focus {
-            border-color: #28a745; /* Fokusda olan inputun sərhədi yaşıl olacaq */
-            outline: none;
         }
 
         button {
             background-color: #28a745;
-            border-radius: 25px;
-            padding: 15px 30px;
-            font-size: 1.1em;
-            transition: background-color 0.3s ease;
+            color: white;
+            font-size: 1.2em;
+            border: none;
+            border-radius: 5px;
             cursor: pointer;
         }
 
         button:hover {
             background-color: #218838;
-            transform: scale(1.1); /* Düymə biraz böyüyəcək */
-            transition: transform 0.3s ease-in-out;
-        }
-
-        #result {
-            font-size: 2em;
-            color: #28a745;
-            font-weight: bold;
-            background-color: #f5f5f5;
-            padding: 20px;
-            margin-top: 20px;
-            border-radius: 15px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
         footer {
@@ -103,19 +81,14 @@
 </head>
 <body>
     <header>
-        <h1>İSMAYILOV FITNESS</h1> <!-- Saytın başlığı -->
+        <h1>İSMAYILOV FITNESS</h1>
     </header>
 
-    <section id="calculator">
-        <h2>Gündəlik Protein Ehtiyacını Hesabla</h2>
-        <form id="proteinForm">
-            <label for="weight">Çəkini (kq) daxil et:</label>
-            <input type="number" id="weight" required>
-
-            <button type="submit">Hesabla</button>
-        </form>
-
-        <div id="result"></div> <!-- Hesablanan nəticəni göstərmək üçün div -->
+    <section id="chatContainer">
+        <h2>İnteraktiv Mesajlaşma</h2>
+        <div id="messages"></div> <!-- Mesajlar burada göstəriləcək -->
+        <input type="text" id="messageInput" placeholder="Mesajınızı yazın...">
+        <button id="sendButton">Göndər</button>
     </section>
 
     <footer>
@@ -123,16 +96,33 @@
     </footer>
 
     <script>
-        // JavaScript - Gündəlik Protein Hesablayıcı
-        document.getElementById('proteinForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-            
-            let weight = document.getElementById('weight').value;
-            if (weight) {
-                let proteinNeed = weight * 2; // Bu, ortalama bir protein ehtiyacıdır (2 q/kq).
-                document.getElementById('result').innerHTML = `Gündəlik protein ehtiyacınız: <strong>${proteinNeed} q</strong>`;
-            } else {
-                document.getElementById('result').innerHTML = 'Zəhmət olmasa çəkini daxil edin!';
+        const socket = new WebSocket('ws://localhost:8080'); // WebSocket serverə qoşulma
+
+        const messageInput = document.getElementById('messageInput');
+        const sendButton = document.getElementById('sendButton');
+        const messages = document.getElementById('messages');
+
+        // Serverdən gələn mesajları göstərmək
+        socket.onmessage = (event) => {
+            const messageElement = document.createElement('p');
+            messageElement.textContent = event.data;
+            messages.appendChild(messageElement);
+            messages.scrollTop = messages.scrollHeight; // Yuxarıya doğru kaydır
+        };
+
+        // Mesaj göndərmə
+        sendButton.addEventListener('click', () => {
+            const message = messageInput.value.trim();
+            if (message) {
+                socket.send(message); // Mesajı WebSocket serverə göndər
+                messageInput.value = ''; // Mesajı göndərdikdən sonra inputu təmizləyir
+            }
+        });
+
+        // Enter düyməsi ilə mesaj göndərmək
+        messageInput.addEventListener('keydown', (e) => {
+            if (e.key === 'Enter') {
+                sendButton.click();
             }
         });
     </script>
